# game-of-life

./: Cargo.toml  index.html
src/: lib.rs  view.rs  wasm.rs  world.rs
