[package]
name = "game-of-life"
version = "0.1.0"
authors = ["Sheheryar Parvaz <me@cherryman.org>"]
edition = "2018"

[lib]
name = "lib"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2.69"

[dependencies.web-sys]
version = "0.3.46"
features = [
  'CanvasRenderingContext2d',
  'Document',
  'Element',
  'HtmlCanvasElement',
  'Window',
  'Performance',
  'Event',
]
